<resources>
    <string name="app_name">uptEnfermeria</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">EnfermeriaUPT</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Registro</string>
    <string name="menu_slideshow">Ingreso</string>
    <string name="menu_mensaje">Buscar Ciudad</string>

    <string name="register_name">Nombre</string>
    <string name="register_secondName">Apellido</string>
    <string name="register_email">Correo</string>
    <string name="register_password">Contraseña</string>

    <string name="login_email">Correo</string>
    <string name="login_password">Contraseña</string>

    <string name="btn_reg">Registrar</string>
    <string name="btn_log">Ingresar</string>
    <string name="btn_send">Enviar</string>
    <string name="btn_city">Buscar</string>
    <string name="txt_ecalada">Escalada de Calidad del Aire</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="message_tittle">Buscar Cuidad</string>
    <string name="message_body">Explica una descripción</string>
</resources>